--- a/images.html
+++ b/images.html
@@ -7,37 +7,57 @@
     <script src="js/wiki.js"></script>
     <link href="css/jquery.mobile-1.4.0.min.css" rel="stylesheet" />
     <link href="css/css.css" rel="stylesheet" />
+    <script src="js/google.js" type="text/javascript"></script>
+  <script type="text/javascript">
+      google.load('search', '1');
+    function searchComplete(searcher) {
+        // Check that we got results
+        if (searcher.results && searcher.results.length > 0) {
+            // Grab our content div, clear it.
+            var contentDiv = document.getElementById('content');
+            contentDiv.innerHTML = '';
+
+            // Loop through our results, printing them to the page.
+            var results = searcher.results;
+            for (var i = 0; i < results.length; i++) {
+                // For each result write it's title and image to the screen
+                var result = results[i];
+                var imgContainer = document.createElement('span');
+
+                var newImg = document.createElement('img');
+                // There is also a result.url property which has the escaped version
+                newImg.src = result.tbUrl;
+
+                imgContainer.appendChild(newImg);
+                // Put our title + image in the content
+                contentDiv.appendChild(imgContainer);
+            }
+        }
+    }
+    function ShowImg(q) {
+        // Our ImageSearch instance.
+        var imageSearch = new google.search.ImageSearch();
+
+        // Here we set a callback so that anytime a search is executed, it will call
+        // the searchComplete function and pass it our ImageSearch searcher.
+        // When a search completes, our ImageSearch object is automatically
+        // populated with the results.
+        imageSearch.setSearchCompleteCallback(this, searchComplete, [imageSearch]);
+
+        // Find me a beautiful car.
+        imageSearch.execute(q);
+    }
+    //    google.setOnLoadCallback(OnLoad);
+    </script>
     <script>
         $(document).ready(function () {
-            $(".search_input").keyup(function () {
-                $("#def").text("Looking in network.....");
+            $(".search_input").change(function () {
                 var search_input = $(this).val();
-                var keyword = encodeURIComponent(search_input);
-                $.ajax({
-                    type: 'GET',
-                    url: "http://api.duckduckgo.com/?q=define+" + keyword + "&format=json&pretty=1",
-                    //force to handle it as text
-                    dataType: "jsonp",
-                    success: function (data) {
-                        $("#wiki").html("<div>" + data.Definition + "-<a href='" + data.DefinitionURL + "'>Source</a></div>");
-                    }
-                });
-                $.ajax({
-                    type: 'GET',
-                    url: "http://api.duckduckgo.com/?q="+keyword+"&format=json&pretty=1",
-                    //force to handle it as text
-                    dataType: "jsonp",
-                    success: function (data) {
-                        document.getElementById("wiki1").innerHTML = "";
-                        var i = 0;
-                        while (data.RelatedTopics[i].Result!=null){
-                            document.getElementById("wiki1").innerHTML += "<div>" + data.RelatedTopics[i].Result + "</div><br>";
-                            ++i;
-                        }
-                    }
-                });
+                ShowImg(search_input);
             });
         });
+
+    
     </script>
 </head>
 <body>
@@ -48,24 +68,20 @@
         </div>
         <div data-role="content">
             <input type="search" placeholder="Enter...." id="search" name="search" class='search_input' />
+            <input id="search" type="submit" name="submit" value="Search" data-role="button" data-theme="a" />
             <br />
             <div id="wrapper">
-                <div id="wiki">
-                    <span id="def">Give a keyword...</span>
-                </div>
-                <div id="wiki1" style="margin:10px">
-                </div>
+                <div id="gallery"><div id="content" style="margin:5px">Loading...</div></div>
             </div>
         </div>
 
-        <!-- defaultpanel  -->
         <div data-role="panel" id="defaultpanel" data-theme="a">
 
             <div class="panel-content">
                 <div data-role="header" style="background-color: #0071bc;border:2px #0071bc solid;box-shadow:black 0px 0px 20px;margin-bottom:50px;"><h1 style="color:white;text-shadow:none;font-family:'Segoe UI';">menu</h1></div>
                 <ul data-role="listview" data-theme="b">
-                    <li>Definition</li>
-                    <li><a href="images.html" rel="external">Images</a></li>
+                    <li><a href="index.html" rel="external">Definition</a></li>
+                    <li>Images</li>
                     <li><a href="vids.html" rel="external">Videos</a></li>
                     <li><a href="books.html" rel="external">Books</a></li>
                     <li><a href="#demo-links" data-rel="close" data-role="button" data-theme="c" data-icon="delete" data-inline="true">Close panel</a></li>
