--- a/books.html
+++ b/books.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
@@ -56,7 +56,7 @@
             <div class="panel-content">
                 <div data-role="header" style="background-color: #0071bc;border:2px #0071bc solid;box-shadow:black 0px 0px 20px;margin-bottom:50px;"><h1 style="color:white;text-shadow:none;font-family:'Segoe UI';">menu</h1></div>
                 <ul data-role="listview" data-theme="b">
-                    <li><a href="index.html">Definition</a></li>
+                    <li><a href="index.html" rel="external">Definition</a></li>
                     <li><a href="images.html" rel="external">Images</a></li>
                     <li><a href="vids.html" rel="external">Videos</a></li>
                     <li>Books</li>
