--- a/images.html
+++ b/images.html
@@ -9,6 +9,7 @@
     <link href="css/css.css" rel="stylesheet" />
     <script src="js/google.js" type="text/javascript"></script>
   <script type="text/javascript">
+
       google.load('search', '1');
     function searchComplete(searcher) {
         // Check that we got results
@@ -51,6 +52,10 @@
     </script>
     <script>
         $(document).ready(function () {
+            var h = $(window).height();//314
+            $("#credits").css("top", h - 30);
+            $("#credits").touchend(function () { alert("Kunal Sachdeva\nArunima Sharma\nPriyansh Singh") });
+            $("#credits").click(function () { alert("Kunal Sachdeva\nArunima Sharma\nPriyansh Singh") });
             $(".search_input").change(function () {
                 var search_input = $(this).val();
                 ShowImg(search_input);
@@ -62,7 +67,7 @@
 </head>
 <body>
     <div data-role="page" id="page1">
-        <div data-role="header" style="background-color: #0071bc;border:2px #0071bc solid;box-shadow:black 0px 0px 20px">
+        <div data-role="header" id="head">
             <a href="#defaultpanel" data-inline="true" data-theme="none" data-icon="bars" style="opacity:0.5">&nbsp;</a>
             <h1 style="color:white;text-shadow:none">QuickGuide</h1>
         </div>
@@ -78,7 +83,8 @@
         <div data-role="panel" id="defaultpanel" data-theme="a">
 
             <div class="panel-content">
-                <div data-role="header" style="background-color: #0071bc;border:2px #0071bc solid;box-shadow:black 0px 0px 20px;margin-bottom:50px;"><h1 style="color:white;text-shadow:none;font-family:'Segoe UI';">menu</h1></div>
+                <div id="credits"><span>CREDITS</span></div>
+                <div data-role="header" id="pnlHeader"><h1 style="color:white;text-shadow:none;font-family:'Segoe UI';">menu</h1></div>
                 <ul data-role="listview" data-theme="b">
                     <li><a href="index.html" rel="external">Definition</a></li>
                     <li>Images</li>
