--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <link href="css/css.css" rel="stylesheet" />
     <script>
         $(document).ready(function () {
+            var h = $(window).height();//314
+            $("#credits").css("top", h - 30);
+            $("#credits").touchend(function () { alert("Kunal Sachdeva\nArunima Sharma\nPriyansh Singh") });
+            $("#credits").click(function () { alert("Kunal Sachdeva\nArunima Sharma\nPriyansh Singh") });
             $(".search_input").keyup(function () {
                 $("#def").text("Looking in network.....");
                 var search_input = $(this).val();
                 var keyword = encodeURIComponent(search_input);
                 $.ajax({
                     type: 'GET',
-                    url: "http://api.duckduckgo.com/?q=define+" + keyword + "&format=json&pretty=1",
+                    url: "http://api.duckduckgo.com/?q=define+" + keyword + "&format=json",
                     //force to handle it as text
                     dataType: "jsonp",
                     success: function (data) {
@@ -42,7 +46,7 @@
 </head>
 <body>
     <div data-role="page" id="page1">
-        <div data-role="header" style="background-color: #0071bc;border:2px #0071bc solid;box-shadow:black 0px 0px 20px">
+        <div data-role="header" id="head">
             <a href="#defaultpanel" data-inline="true" data-theme="none" data-icon="bars" style="opacity:0.5">&nbsp;</a>
             <h1 style="color:white;text-shadow:none">QuickGuide</h1>
         </div>
@@ -56,13 +60,15 @@
                 <div id="wiki1" style="margin:10px">
                 </div>
             </div>
+
         </div>
 
         <!-- defaultpanel  -->
         <div data-role="panel" id="defaultpanel" data-theme="a">
 
-            <div class="panel-content">
-                <div data-role="header" style="background-color: #0071bc;border:2px #0071bc solid;box-shadow:black 0px 0px 20px;margin-bottom:50px;"><h1 style="color:white;text-shadow:none;font-family:'Segoe UI';">menu</h1></div>
+            <div class="panel-content" style="height:100%">
+                <div id="credits"><span>CREDITS</span></div>
+                <div data-role="header" id="pnlHeader"><h1 style="color:white;text-shadow:none;font-family:'Segoe UI';">menu</h1></div>
                 <ul data-role="listview" data-theme="b">
                     <li>Definition</li>
                     <li><a href="images.html" rel="external">Images</a></li>
@@ -70,7 +76,6 @@
                     <li><a href="books.html" rel="external">Books</a></li>
                     <li><a href="#demo-links" data-rel="close" data-role="button" data-theme="c" data-icon="delete" data-inline="true">Close panel</a></li>
                 </ul>
-
             </div><!-- /content wrapper for padding -->
         </div><!-- /defaultpanel -->
     </div>
